@@ -5,7 +5,8 @@ import java.io.IOException;
 import java.net.Socket;
 import java.util.ArrayList;
 
-import static nro.server.io.Session.KEYS;
+import static com.nro.nro_online.server.io.Session.KEYS;
+
 import com.nro.nro_online.utils.Log;
 
 public class MessageSender implements Runnable {
@@ -30,7 +31,8 @@ public class MessageSender implements Runnable {
     public void addMessage(Message message) {
         try {
             sendingMessage.add(message);
-        } catch (Exception e) {}
+        } catch (Exception e) {
+        }
     }
 
     @Override
@@ -38,13 +40,15 @@ public class MessageSender implements Runnable {
         Message message;
         while (session != null && session.connected) {
             try {
-                while (!(sendingMessage.isEmpty()) && (message = sendingMessage.remove(0)) != null) {
+                while (!(sendingMessage.isEmpty()) && (message = sendingMessage.removeFirst()) != null) {
                     doSendMessage(message);
                 }
-            } catch (Exception e) {}
+            } catch (Exception e) {
+            }
             try {
                 Thread.sleep(10);
-            } catch (Exception e) {}
+            } catch (Exception e) {
+            }
         }
     }
 
@@ -66,26 +70,29 @@ public class MessageSender implements Runnable {
                     dos.writeShort(size);
                 }
                 if (session.connected) {
-                    for (int i = 0; i < data.length; i++) data[i] = writeKey(data[i]);
+                    for (int i = 0; i < data.length; i++)
+                        data[i] = writeKey(data[i]);
                 }
                 dos.write(data);
             } else {
                 dos.writeShort(0);
             }
             dos.flush();
-            msg.cleanup();
-        } catch (Exception e) {}
+            msg.close();
+        } catch (Exception e) {
+        }
     }
 
     private byte writeKey(byte b) {
         byte i = (byte) ((KEYS[session.curW++] & 255) ^ (b & 255));
-        if (session.curW >= KEYS.length) session.curW %= KEYS.length;
+        if (session.curW >= KEYS.length)
+            session.curW %= KEYS.length;
         return i;
     }
 
     public void sendSessionKey() {
-        Message msg = new Message(-27);
-        try {
+
+        try (Message msg = new Message(-27)) {
             msg.writer().writeByte(KEYS.length);
             msg.writer().writeByte(KEYS[0]);
             for (int i = 1; i < KEYS.length; i++) {
@@ -95,17 +102,19 @@ public class MessageSender implements Runnable {
             msg.writer().writeInt(14445);
             msg.writer().writeBoolean(false);
             doSendMessage(msg);
-            msg.cleanup();
             session.connected = true;
             session.sendThread.start();
-        } catch (Exception e) {}
+        } catch (Exception e) {
+        }
     }
 
     void close() throws IOException {
-        if (dos != null) dos.close();
+        if (dos != null)
+            dos.close();
         dos = null;
         session = null;
-        if (sendingMessage != null) sendingMessage.clear();
+        if (sendingMessage != null)
+            sendingMessage.clear();
         sendingMessage = null;
     }
 }
